# linux_api_notes

./: README.md
daemon/: Makefile  daemon.c
dirs/: Makefile  dirs.c
epoll/: Dockerfile  README.md  create_container.sh  run_container.sh
epoll/proj/: CMakeLists.txt
epoll/proj/load_tests/: CMakeLists.txt  tester.cpp
epoll/proj/server/: CMakeLists.txt  server.cpp
fifo_chanels/: client.c  make.sh  pipes.c  server.c
mesag/: make.sh  msg_client.c  msg_server.c  msg_types.h
module_basic/: Makefile  main.c
shared_mem/: make.sh  shm_client.c  shm_server.c  shmemtypes.h  work.c
signals/: Makefile  basic.c  sigset.c
socket/: Makefile  fsclient.c  fsinclude.h  fsserver.c  netclient.c  netinclude.h  netserver.c  sockpair.c
